# strawberry-benchmark-rust

./: Cargo.toml  README.md
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs  main.rs
src/: lib.rs
